Adicionados novos ficheiros java com novas restrições no movimento de uma peça e funcao auxiliar que devolve o vencedor.